11-ingress/03-host-based-routing/qa-workload/02-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: my-ingress
spec:
  ingressClassName: nginx
  rules:
    - host: "localhost.qa"
      http:
        paths:
          - pathType: Prefix
            path: /
            backend:
              service:
                name: my-app
                port:
                  number: 80
